turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:13: error: identifier expected but integer literal found.
var T:Array[1,8,0]
            ^Turmite:14: error: ']' expected but ';' found.
var rule:Array[Array[Array[Int]]] = [1,8,0],[1,8,0],[0,1,0],[0,1,1]
^Turmite:14: error: illegal start of simple expression
var rule:Array[Array[Array[Int]]] = [1,8,0],[1,8,0],[0,1,0],[0,1,1]
                                    ^